@@ -21,6 +21,7 @@
  * ====================
  * Portions Copyrighted 2010-2015 ForgeRock AS.
  * Portions Copyrighted 2010-2014 Tirasa.
+ * Portions Copyrighted 2026 3A Systems, LLC
  */
 package org.identityconnectors.framework.impl.api.local;
 
@@ -325,7 +326,7 @@ public class LocalConnectorInfoManagerImpl implements ConnectorInfoManager {
         try {
             final Class<? extends Connector> connectorClass = localInfo.getConnectorClass();
             final APIConfigurationImpl rv = new APIConfigurationImpl();
-            final Configuration config = localInfo.getConnectorConfigurationClass().newInstance();
+            final Configuration config = localInfo.getConnectorConfigurationClass().getDeclaredConstructor().newInstance();
             final boolean pooling = PoolableConnector.class.isAssignableFrom(connectorClass);
             rv.setConnectorPoolingSupported(pooling);
             rv.setConfigurationProperties(JavaClassProperties.createConfigurationProperties(config));
