@@ -20,6 +20,7 @@
  * "Portions Copyrighted [year] [name of copyright owner]"
  * ====================
  * Portions Copyrighted 2010-2015 ForgeRock AS.
+ * Portions Copyrighted 2026 3A Systems, LLC
  */
 package org.identityconnectors.framework.impl.api.local.operations;
 
@@ -95,7 +96,7 @@ public class ConnectorAPIOperationRunnerProxy implements InvocationHandler {
             }
             else {
                 // get a new instance of the connector..
-                connector = connectorClazz.newInstance();
+                connector = connectorClazz.getDeclaredConstructor().newInstance();
                 // initialize the connector..
                 connector.init(context.getConfiguration());
             }
