@@ -110,7 +110,7 @@ public abstract class ConnectorServer {
     public static ConnectorServer newInstance() {
         try {
             final Class<?> clazz = Class.forName(IMPL_NAME);
-            return (ConnectorServer) clazz.newInstance();
+            return (ConnectorServer) clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw ConnectorException.wrap(e);
         }
