@@ -335,7 +335,7 @@ public class OsgiConnectorInfoManagerImpl extends ConnectorFacadeFactory impleme
         try {
             Class<? extends Connector> connectorClass = localInfo.getConnectorClass();
             APIConfigurationImpl rv = new APIConfigurationImpl();
-            Configuration config = localInfo.getConnectorConfigurationClass().newInstance();
+            Configuration config = localInfo.getConnectorConfigurationClass().getDeclaredConstructor().newInstance();
             boolean pooling = PoolableConnector.class.isAssignableFrom(connectorClass);
             rv.setConnectorPoolingSupported(pooling);
             rv.setConfigurationProperties(JavaClassProperties.createConfigurationProperties(config));
